--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,13 @@ img:hover {
   overflow: visible;
 }
 .carousel-control-next {
-  position: absolute;
   right: -5%;
   width: 5%;
 }
 .carousel-control-prev {
-  position: absolute;
   left: -5%;
   width: 5%;
+}
+.bg-profile {
+  background-color: black;
 }
